--- a/com.kubelt.sdk.v1.oort.html
+++ b/com.kubelt.sdk.v1.oort.html
@@ -149,7 +149,7 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn call-rpc-api-js [sys core method args]
-  (call-rpc-method sys core method args))</pre>
+  (call-rpc-method sys core method (js-&gt;clj args)))</pre>
 				</td>
 			</tr>
 			<tr>
