--- a/index.html
+++ b/index.html
@@ -828,6 +828,9 @@
 								<a href="com.kubelt.spec.openrpc.tag.html">com.kubelt.spec.openrpc.tag</a>
 							</li>
 							<li>
+								<a href="com.kubelt.spec.profile.html">com.kubelt.spec.profile</a>
+							</li>
+							<li>
 								<a href="com.kubelt.spec.quad.html">com.kubelt.spec.quad</a>
 							</li>
 							<li>
