--- a/com.kubelt.rpc.nfts-test.html
+++ b/com.kubelt.rpc.nfts-test.html
@@ -81,21 +81,11 @@
                                                                       :perPage 1
                                                                       :page 1}}}))
                               :http/body :result)]
-                 (is (= {:owner &quot;0x505D79c7379EE65B6c2D6D18a0e7aB901b00756C&quot;,
-                         :assets
-                         [{:description &quot;CryptoPunksMarket&quot;,
-                           :image-url
-                           &quot;https://www.larvalabs.com/cryptopunks/cryptopunk1.png&quot;,
-                           :collection-address &quot;0xb47e3cd837dDF8e4c57F05d70Ab865de6e193BBB&quot;,
-                           :name &quot;CryptoPunksMarket #1&quot;,
-                           :collection-token-id &quot;1&quot;,
-                           :current-owner &quot;0x1919DB36cA2fa2e15F9000fd9CdC2EdCF863E685&quot;,
-                           :chain &quot;ETH&quot;,
-                           :collection-name &quot;CryptoPunksMarket&quot;,
-                           :network &quot;mainnet&quot;}],
-                         :page-number 1}
+                 (is (= #{:owner :assets :page-number}
                         ;; not checking totals thus is a changing number over time
-                        (dissoc nfts :total-items :total-pages))))
+                        (set (keys (dissoc nfts :total-items :total-pages)))))
+                 (is (= #{:description :image-url :collection-address :name :collection-token-id :current-owner :chain :collection-name :network}
+                        (set (keys (-&gt; nfts :assets first))))))
                (catch js/Error err (do
                                      (log/error err)
                                      (is false err)))
