deploy: fb0231bb1b1b6b14c1426d39e7542d2344637dcc

--- a/index.html
+++ b/index.html
@@ -888,6 +888,9 @@
 								<a href="com.kubelt.rpc.nfts-test.html">com.kubelt.rpc.nfts-test</a>
 							</li>
 							<li>
+								<a href="com.kubelt.rpc.oort-test.html">com.kubelt.rpc.oort-test</a>
+							</li>
+							<li>
 								<a href="com.kubelt.rpc.profile-test.html">com.kubelt.rpc.profile-test</a>
 							</li>
 							<li>
