--- a/com.kubelt.sdk.v1.html
+++ b/com.kubelt.sdk.v1.html
@@ -41,7 +41,7 @@
    [com.kubelt.lib.config.default :as lib.config.default]
    [com.kubelt.lib.config.sdk :as lib.config.sdk]
    [com.kubelt.lib.config.system :as lib.config.system]
-   [com.kubelt.lib.error :as lib.error]
+   [com.kubelt.lib.error :as lib.error :refer [conform*] :refer-macros [conform*]]
    [com.kubelt.lib.init :as lib.init]
    [com.kubelt.lib.promise :as lib.promise :refer [promise?]]
    [com.kubelt.spec.config :as spec.config])
@@ -266,7 +266,12 @@
         (lib.promise/then
          (fn [{:keys [options vault]}]
            ;; TODO fold options back into system map?
-           (assoc system :crypto/session vault))))))</pre>
+           (let [restored-system (-&gt; system
+                                     (assoc :crypto/session vault
+                                            :crypto/wallet {:com.kubelt/type :kubelt.type/wallet
+                                                            :wallet/address (-&gt; vault :vault/tokens keys first)}))]
+             (conform* [spec.config/restored-system restored-system]
+                       restored-system)))))))</pre>
 				</td>
 			</tr>
 			<tr>
