--- a/index.html
+++ b/index.html
@@ -603,6 +603,9 @@
 								<a href="integrant.cljc.html">integrant.cljc</a>
 							</li>
 							<li>
+								<a href="com.kubelt.lib.io.node.html">com.kubelt.lib.io.node</a>
+							</li>
+							<li>
 								<a href="com.kubelt.lib.ipld.html">com.kubelt.lib.ipld</a>
 							</li>
 							<li>
@@ -858,6 +861,9 @@
 								<a href="com.kubelt.spec.storage.html">com.kubelt.spec.storage</a>
 							</li>
 							<li>
+								<a href="com.kubelt.spec.vault.html">com.kubelt.spec.vault</a>
+							</li>
+							<li>
 								<a href="com.kubelt.spec.wallet.html">com.kubelt.spec.wallet</a>
 							</li>
 							<li>
@@ -877,6 +883,9 @@
 							</li>
 							<li>
 								<a href="com.kubelt.rpc.schema-test.html">com.kubelt.rpc.schema-test</a>
+							</li>
+							<li>
+								<a href="com.kubelt.rpc.sdk-test.html">com.kubelt.rpc.sdk-test</a>
 							</li>
 							<li>
 								<a href="com.kubelt.rpc.test-commons.html">com.kubelt.rpc.test-commons</a>
