--- a/com.kubelt.spec.wallet.html
+++ b/com.kubelt.spec.wallet.html
@@ -34,9 +34,7 @@
 					<pre class="brush: clojure">(ns com.kubelt.spec.wallet
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
-   [com.kubelt.spec.common :as spec.common]
-   [com.kubelt.spec.core :as spec.core]
-   [com.kubelt.spec.jwt :as spec.jwt]))</pre>
+   [com.kubelt.spec.common :as spec.common]))</pre>
 				</td>
 			</tr>
 			<tr>
@@ -122,7 +120,7 @@ wallet.&quot;}
    [:wallet/address wallet-address]
    ;;[:wallet/encrypt-key spec.crypto/public-key]
    ;;[:wallet/decrypt-fn decrypt-fn]
-   [:wallet/sign-fn sign-fn]])</pre>
+   [:wallet/sign-fn {:optional true} sign-fn]])</pre>
 				</td>
 			</tr>
 			<tr>
@@ -140,41 +138,6 @@ wallet.&quot;}
                                    :key/data &quot;&lt;key data&gt;&quot;}
               :wallet/sign-fn '(fn [data] &quot;&lt;signature&gt;&quot;)}}
    wallet])</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					<h2>Vault</h2>A vault is a collection of session tokens (JWTs) returned fromauthentication calls.
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure"></pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(def vault
-  [:map
-   [:com.kubelt/type [:enum :kubelt.type/vault]]
-   [:vault/tokens [:map-of spec.core/id spec.jwt/jwt]]])</pre>
-				</td>
-			</tr>
-			<tr>
-				<td class="docs">
-					
-				</td>
-				<td class="codes">
-					<pre class="brush: clojure">(def vault-schema
-  [:and
-   {:name &quot;vault&quot;
-    :description &quot;A collection of session tokens&quot;
-    :example {:com.kubelt/type :kubelt.type/vault
-              ;; TODO is this correct?
-              :vault/tokens {&quot;@acme&quot; {:com.kubelt/type :kubelt.type/jwt
-                                      ,,,}}}}
-   vault])</pre>
 				</td>
 			</tr>
 			<tr>
