--- a/com.kubelt.sdk.v1.oort.html
+++ b/com.kubelt.sdk.v1.oort.html
@@ -159,10 +159,8 @@
 				</td>
 				<td class="codes">
 					<pre class="brush: clojure">(defn claims-js [sys]
-  (let [core (-&gt; (get-in sys [:crypto/session :vault/tokens]) keys first)]
-    (-&gt; (assoc sys :crypto/wallet {:wallet/address core})
-        (claims&amp; core)
-        (lib.promise/then clj-&gt;js))))</pre>
+  (-&gt; (claims&amp; sys (get-in sys [:crypto/wallet :wallet/address]))
+      (lib.promise/then clj-&gt;js)))</pre>
 				</td>
 			</tr>
 			<tr>
