--- a/com.kubelt.sdk.v1.oort.html
+++ b/com.kubelt.sdk.v1.oort.html
@@ -34,6 +34,8 @@
 					<pre class="brush: clojure">(ns com.kubelt.sdk.v1.oort
   {:copyright &quot;©2022 Proof Zero Inc.&quot; :license &quot;Apache 2.0&quot;}
   (:require
+   [camel-snake-kebab.core :as csk]
+   [camel-snake-kebab.extras :as cske]
    [com.kubelt.lib.error :as lib.error]
    [com.kubelt.lib.jwt :as lib.jwt]
    [com.kubelt.lib.oort :as lib.oort]
@@ -191,16 +193,16 @@
   ([sys args]
    (let [{:keys [method params]} (js-&gt;clj args :keywordize-keys true)]
      (-&gt; (call-rpc&amp; sys
-                          (-&gt; sys :crypto/wallet :wallet/address)
-                          (mapv keyword (js-&gt;clj method))
-                          params)
-         (lib.promise/then clj-&gt;js)
+                    (-&gt; sys :crypto/wallet :wallet/address)
+                    (mapv keyword (js-&gt;clj method))
+                    params)
+         (lib.promise/then #(clj-&gt;js (cske/transform-keys csk/-&gt;camelCaseString %)))
          (lib.promise/catch clj-&gt;js))))
   ([sys method params]
    (let [method (mapv keyword (js-&gt;clj method))
          params (js-&gt;clj params :keywordize-keys true)]
      (-&gt; (call-rpc&amp; sys (-&gt; sys :crypto/wallet :wallet/address) method params)
-         (lib.promise/then clj-&gt;js)
+         (lib.promise/then #(clj-&gt;js (cske/transform-keys csk/-&gt;camelCaseString %)))
          (lib.promise/catch clj-&gt;js)))))</pre>
 				</td>
 			</tr>
