--- a/com.kubelt.rpc.nfts-test.html
+++ b/com.kubelt.rpc.nfts-test.html
@@ -71,7 +71,7 @@
                      sys (&lt;p! (sdk/init config))
                      wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/wallet-name t.commons/wallet-password))
                      core (:wallet/address wallet)
-                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
+                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet) {}))
                      api (-&gt; (&lt;p! (sdk.oort/rpc-api sys core))
                              (update :methods conj (&lt;! (lib.test-utils/read-local-edn&amp;go &quot;oort/methods/qn-fetch-nfts.edn&quot;))))
                      nfts (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api
@@ -99,7 +99,7 @@
                      sys (&lt;p! (sdk/init config))
                      wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/wallet-name t.commons/wallet-password))
                      core (:wallet/address wallet)
-                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
+                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet) {}))
                      api (&lt;p! (sdk.oort/rpc-api sys core))
                      nfts (-&gt; (&lt;p! (lib.rpc/rpc-call&amp; kbt api
                                                       {:method  [:alchemy :get-nf-ts]
