--- a/com.kubelt.rpc.sdk-test.html
+++ b/com.kubelt.rpc.sdk-test.html
@@ -63,48 +63,18 @@
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>(deftest sdk-store-restore-specs-test   (testing "test store, restore specs"     (async done            (go              (try                (let [sys (<p! (sdk/init (t.commons/oort-config)))                      wallet (<p! (wallet/load& t.commons/app-name t.commons/test-wallet-name t.commons/test-wallet-password))                      kbt (<p! (sdk.oort/authenticate& (assoc sys :crypto/wallet wallet) {}))                      store-result (:data (<p! (sdk/store& kbt)))]                  (is (= (set (keys store-result)) #{:vault :options}))                  (is (m/validate com.kubelt.spec.vault/vault (:vault store-result)))                  (is (m/validate spec.config/stored-system-config (:options store-result)))                  (is (m/validate spec.config/restored-system (<p! (sdk/restore& sys)))))                (catch js/Error err (do                                      (log/error err)                                      (is false err)))                (finally (done)))))))</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(deftest sdk-store-restore-specs-test
-  (testing &quot;test store, restore specs&quot;
-    (async done
-           (go
-             (try
-               (let [sys (&lt;p! (sdk/init (t.commons/oort-config)))
-                     wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/test-wallet-name t.commons/test-wallet-password))
-                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
-                     store-result (:data (&lt;p! (sdk/store&amp; kbt)))]
-                 (is (= (set (keys store-result)) #{:vault :options}))
-                 (is (m/validate com.kubelt.spec.vault/vault (:vault store-result)))
-                 (is (m/validate spec.config/stored-system-config (:options store-result)))
-                 (is (m/validate spec.config/restored-system (&lt;p! (sdk/restore&amp; sys)))))
-               (catch js/Error err (do
-                                     (log/error err)
-                                     (is false err)))
-               (finally (done)))))))</pre>
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
 				<td class="docs">
-					
+					<p>(deftest restore-claims-and-rpc-test   (testing "test restore claims and rpc"     (async done            (go              (try                (let [sys (<p! (sdk/init (t.commons/oort-config)))                      wallet (<p! (wallet/load& t.commons/app-name t.commons/test-wallet-name t.commons/test-wallet-password))                      kbt (<p! (sdk.oort/authenticate& (assoc sys :crypto/wallet wallet) {}))                      _ (<p! (sdk/store& kbt))                      restored-system (<p! (sdk/restore& sys))]                  (is (= ["3id.enter"] (<p! (sdk.oort/claims& restored-system (get-in restored-system [:crypto/wallet :wallet/address]))))))                (catch js/Error err (do                                      (log/error err)                                      (is false err)))                (finally (done)))))))</p>
 				</td>
 				<td class="codes">
-					<pre class="brush: clojure">(deftest restore-claims-and-rpc-test
-  (testing &quot;test restore claims and rpc&quot;
-    (async done
-           (go
-             (try
-               (let [sys (&lt;p! (sdk/init (t.commons/oort-config)))
-                     wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/test-wallet-name t.commons/test-wallet-password))
-                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
-                     _ (&lt;p! (sdk/store&amp; kbt))
-                     restored-system (&lt;p! (sdk/restore&amp; sys))]
-                 (is (= [&quot;3id.enter&quot;] (&lt;p! (sdk.oort/claims&amp; restored-system (get-in restored-system [:crypto/wallet :wallet/address]))))))
-               (catch js/Error err (do
-                                     (log/error err)
-                                     (is false err)))
-               (finally (done)))))))</pre>
+					<pre class="brush: clojure"></pre>
 				</td>
 			</tr>
 			<tr>
@@ -120,7 +90,7 @@
              (try
                (let [sys (&lt;p! (sdk/init (t.commons/oort-config)))
                      wallet (&lt;p! (wallet/load&amp; t.commons/app-name t.commons/test-wallet-name t.commons/test-wallet-password))
-                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet)))
+                     kbt (&lt;p! (sdk.oort/authenticate&amp; (assoc sys :crypto/wallet wallet) {}))
                      result (-&gt; (&lt;p! (sdk.oort/call-rpc-js
                                       kbt
                                       #js [&quot;kb&quot; &quot;get-profile&quot;]
